# troxy

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: brew-update.yml  publish.yml
docs/: design-review.md  qa-protocol.md  v0.3-manual-verification.md
docs/sessions/: 2026-04-29-handoff.md
eval/: runner.py
eval/fixtures/: create_fixtures.py
eval/scenarios/: extract_post_body.yaml  find_401_cause.yaml
homebrew/: troxy.rb
scripts/: bump-version.py  capture_design_screenshots.py  capture_detail_round3.py  check_file_size.py  lint_layers.py  setup.sh
src/troxy/: __init__.py  addon.py
src/troxy/cli/: alias_cmds.py  (+14 more)
tests/: conftest.py
tests/e2e/: test_cli.py  test_cli_intercept.py  test_cli_mock.py  test_mcp.py  test_mcp_explain_failure.py  test_scenarios_cli.py  test_scenarios_mcp.py  test_start.py
tests/tui/: conftest.py  qa_capture.py  test_app.py  test_bottom_bar.py  test_copy.py  test_copy_modal.py  test_detail_helpers.py  test_detail_screen.py  test_inline_filter.py  test_integration.py  test_layout_regression.py  test_list_screen.py  test_mock_dialog.py  test_mock_list.py  test_network.py  test_pause.py  test_proxy.py  test_qa_snapshots.py  test_real_tty.py  test_sort.py  test_theme.py  test_theme_regression.py  test_widgets.py
tests/unit/: test_addon_hit_count.py  test_db.py  test_explain_golden.py  test_export.py  test_external_editor.py  test_filter_parser.py  test_formats.py  test_intercept.py  test_mock.py  test_mock_from_status.py  test_query.py  test_scenarios.py  test_store.py
(+49 files in other folders)
