[project]
name = "troxy"
version = "0.1.0"
description = "Terminal proxy inspector — mitmproxy flows for CLI and Claude"
requires-python = ">=3.14"
dependencies = [
    "click>=8.1",
    "rich>=13.0",
]

[project.optional-dependencies]
mcp = ["mcp>=1.0"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[project.scripts]
troxy = "troxy.cli.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/troxy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[dependency-groups]
dev = [
    "pyyaml>=6.0.3",
]
