[project]
name = "troxy"
version = "0.5.6"
description = "Terminal proxy inspector — mitmproxy flows for CLI and Claude"
requires-python = ">=3.14"
dependencies = [
    "click>=8.1",
    "mitmproxy>=12.2.1",
    "rich>=13.0",
    "textual>=3.0",
]

[project.optional-dependencies]
mcp = ["mcp>=1.0"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.25",
    "pytest-cov>=5.0",
]

[project.scripts]
troxy = "troxy.cli.main:_main"
troxy-mcp = "troxy.mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/troxy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "slow: slow E2E tests (deselect with '-m \"not slow\"')",
]

[dependency-groups]
dev = [
    "pexpect>=4.9.0",
    "pyyaml>=6.0.3",
]
